Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4440

ATS' missing StatsPages have incorrect content-type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • Manager
    • None

    Description

      If you curl a stats page that doesn't exist anymore:

      jacksontj@Thomas-PC trafficserver]$ curl -v localhost:8080/_stats/
      *   Trying ::1...
      * connect to ::1 port 8080 failed: Connection refused
      *   Trying 127.0.0.1...
      * Connected to localhost (127.0.0.1) port 8080 (#0)
      > GET /_stats/ HTTP/1.1
      > Host: localhost:8080
      > User-Agent: curl/7.43.0
      > Accept: */*
      > 
      < HTTP/1.1 400 Bad Request
      < Date: Fri, 13 May 2016 14:55:58 GMT
      < Connection: close
      < Server: ATS/7.0.0
      < Content-Length: 0
      < Content-Type: text/plai
      < 
      * Closing connection 0
      

      Note that the content-type is cut off.

      Attachments

        Issue Links

          Activity

            People

              jacksontj Thomas Jackson
              jacksontj Thomas Jackson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: