TS-4440: fix truncated content-type for missing stats pages

(cherry picked from commit d22f82f34847c506ac02a29ec26468f33a767d93)